<resources>
    <string name="app_name">smeem</string>
    <string name="dev_app_name">smeem dev</string>
    <string name="splash_header">smeem</string>
    <string name="splash_body">일기로 시작하는 영어 아웃풋 트레이닝, \n스밈과 함께해요! </string>
    <string name="splash_footer">이미 계정이 있으신가요?</string>
    <string name="button_start">시작하기</string>
    <string name="splash_bs_header">로그인</string>
    <string name="splash_bs_kakao">카카오로 로그인하기</string>
    <string name="on_boarding_header_no_static">/ 3</string>
    <string name="on_boarding_goal_header_title">트레이닝 목표 설정</string>
    <string name="on_boarding_goal_header_description">마이페이지에서 언제든지 수정할 수 있어요!</string>
    <string name="on_boarding_goal_button1">  자기 계발</string>
    <string name="on_boarding_goal_button2">  즐거운 취미생활</string>
    <string name="on_boarding_goal_button3">  현지 언어 체득</string>
    <string name="on_boarding_goal_button4">  유창한 비즈니스 영어</string>
    <string name="on_boarding_goal_button5">  어학 시험 고득점</string>
    <string name="on_boarding_goal_button6">  아직 모르겠어요</string>
    <string name="on_boarding_training_plan_button1"> 주 1회 작성할게요</string>
    <string name="on_boarding_training_plan_button2"> 주 3회 작성할게요</string>
    <string name="on_boarding_training_plan_button3"> 주 5회 작성할게요</string>
    <string name="on_boarding_training_plan_button4"> 매일 작성할게요</string>

    <string name="on_boarding_training_plan_header_title">트레이닝 플랜 설정</string>
    <string name="on_boarding_training_plan_header_description">목표를 이루기 위한 일기 작성 플랜을 세워요.</string>
    <string name="on_boarding_encouraging_header_title">추천 트레이닝 방법</string>
    <string name="on_boarding_encouraging_header_description">스밈과 함께한다면 분명 목표를 이룰 거에요!</string>
    <string name="on_boarding_encouraging_box_header_title">나의 목표는</string>
    <string name="on_boarding_encouraging_box_header_body">외국어 업무 문서 읽고 작성하기</string>
    <string name="on_boarding_encouraging_box_how_title">학습 방법</string>
    <string name="on_boarding_encouraging_box_goal_title">세부 목표</string>
    <string name="on_boarding_time_header_title">트레이닝 시간 설정</string>
    <string name="on_boarding_time_header_description">당신의 목표를 이룰 수 있도록 알림을 드릴게요!</string>
    <string name="on_boarding_time_later">나중에 설정할래요</string>
    <string name="on_boarding_activity_next">다음</string>
    <string name="on_boarding_sign_up">회원가입</string>
    <string name="on_boarding_kakao_start">카카오로 시작하기</string>
    <string name="on_boarding_start_with_anonymous">비회원으로 시작하기</string>
    <string name="entrance_nickname_header">닉네임 설정</string>
    <string name="entrance_nickname_description">마이페이지에서 수정할 수 있어요.</string>
    <string name="entrance_nickname_duplicated">이미 사용 중인 닉네임이에요 :(</string>
    <string name="entrance_nickname_caption">공백 포함 10자 제한</string>
    <string name="entrance_agreement_header">서비스 이용약관</string>
    <string name="entrance_agreement_description">서비스 이용을 위해 약관에 동의해주세요.</string>
    <string name="entrance_agreement_all">전체 동의하기</string>
    <string name="entrance_agreement_service">[필수] 서비스 이용약관</string>
    <string name="entrance_agreement_personal">[필수] 개인정보 수집 및 이용 동의</string>
    <string name="entrance_agreement_location">[필수] 위치기반 서비스 이용약관 동의</string>
    <string name="entrance_agreement_marketing">[선택] 마케팅 정보 활용 동의</string>
    <string name="my_page_badges">내 배지</string>
    <string name="my_page_edit_done_message">변경 완료</string>
    <string name="diary_write_next">다음</string>
    <string name="diary_write_done">완료</string>
    <string name="diary_write_done_message">오늘의 일기 클리어!</string>
    <string name="diary_write_cancel">취소</string>
    <string name="diary_write_step_1">STEP 1</string>
    <string name="diary_write_step_2">STEP 2</string>
    <string name="diary_write_hint">일기를 작성해주세요 :)</string>
    <string name="diary_native_write_hint">완전한 문장으로 한국어 일기를 작성하면, 더욱 정확한 힌트를 받을 수 있어요.</string>
    <string name="diary_edit_done_message">수정 완료</string>
    <string name="language_korean">한국어</string>
    <string name="dummy_diary_korean">오늘은 OPR을 공개한 날이었다. 안 떨릴 줄 알았는데 겁나 떨렸당. 사실 카페가 추웠어서 추워서 떠는 건지 긴장 돼서 떠는 건지 구분이 잘 안 갔다. 근데 사실 나는 다리 떠는 것도 습관이라 다리를 떨어서 몸이 떨린 걸 수도 있다. 오늘은 OPR을 공개한 날이었다. 안 떨릴 줄 알았는데 겁나 떨렸당. 사실 카페가 추웠어서 추워서 떠는 건지 긴장 돼서 떠는 건지 구분이 잘 안 갔다. 근데 사실 나는 다리 떠는 것도 습관이라 다리를 떨어서 몸이 떨린 걸 수도 있다.</string>
    <string name="my_page">My Page</string>
    <string name="write_diary">일기 작성하기</string>
    <string name="dummy_diary_english">I watched Avatar with my boyfriend at Hongdae CGV. I should have skimmed the previous season - Avatar1.. I really couldn’t get what they were saying and the universe(??). What I was annoyed then was 두팔 didn’t know that as me. I think 두팔 who is my boyfriend should study before wathcing…. but Avatar2 is amazing movie I think. In my personal opinion, the jjin main character of Avatar2 is not Sully, but his son.</string>
    <string name="no_diary_image">No diary image</string>
    <string name="no_diary_notice">작성한 일기가 없어요.</string>
    <string name="go_to_diary_detail">go to diary detail</string>
    <string name="see_diary_detail">전체보기</string>
    <string name="badge_obtain_message">축하해요!\n%s 배지를 획득했어요!</string>
    <string name="badge_obtain_message_mypage">축하해요! %s 배지를 획득했어요!</string>
    <string name="service_agreement">http://smeem.notion.site/7132b91df0eb4838b435b53ad7cbb588?pvs=4</string>
    <string name="personal_info_agreement">http://smeem.notion.site/2c0af4a3f8a340fcbb8eefe4beb24856?pvs=4</string>
    <string name="marketing_info_agreement">https://smeem.notion.site/793bae40ccd14654828b68ee41ac51b6?pvs=4</string>
    <string name="manual_url">https://smeem.notion.site/334e225bb69b45c28f31fe363ca9f25e?pvs=4</string>
    <string name="title_activity_smeem_calendar">SmeemCalendar</string>

    <!-- Badge Dialog -->
    <string name="welcome_badge">웰컴 배지</string>
    <string name="navigate_first_diary">첫 일기 쓰러가기</string>
    <string name="view_all_badge">배지 모두보기</string>

    <!-- My Page -->
    <string name="my_smeem">나의 스밈</string>
    <string name="my_plan">나의 플랜</string>
    <string name="my_badges">나의 배지</string>

    <string name="my_plan_visit_days">방문일</string>
    <string name="my_plan_entire_diary">총 일기</string>
    <string name="my_plan_continuity_diary">연속일기</string>
    <string name="my_plan_badge">배지</string>

    <string name="smeem_card_edit">수정하기</string>
    <string name="change_nickname_card">닉네임 변경</string>
    <string name="my_page_languages">학습 언어</string>
    <string name="my_page_study_alarm">학습 알림</string>
    <string name="language_english">English</string>
    <string name="edit_target_language">edit target language</string>
    <string name="my_page_training_push_alarm">트레이닝 푸시알림</string>

    <string name="my_page_change_nickname">닉네임 변경</string>
    <string name="my_page_change_nickname_button">완료</string>

    <!-- My Page More View -->
    <string name="my_page_more_information">정보</string>
    <string name="my_page_more_manual">이용 안내</string>
    <string name="my_page_more_account_management">계정 관리</string>
    <string name="my_page_more_logout">로그아웃</string>
    <string name="my_page_more_delete_account">계정 삭제</string>

    <!-- Delete account -->
    <string name="delete_account_navi_title">탈퇴하기</string>
    <string name="delete_account_title">정말 떠나시는 건가요?</string>
    <string name="delete_account_subtitle">계정을 삭제하는 이유를 선택해주세요.\n서비스 개선에 참고할게요.</string>
    <string name="delete_account_reason_label">계정 삭제 사유를 자유롭게 적어주세요.</string>
    <string name="delete_account_reason_placeholder">계정 삭제 사유를 적어주세요.</string>

    <!-- Smeem Dialog -->
    <string name="smeem_dialog_yes">예</string>
    <string name="smeem_dialog_no">아니요</string>
    <string name="smeem_dialog_logout_title">로그아웃</string>
    <string name="smeem_dialog_logout_content">로그아웃 하시겠습니까?</string>
    <string name="smeem_dialog_delete_account_title">계정을 삭제하시겠습니까?</string>
    <string name="smeem_dialog_delete_dialog_content">이전에 작성했던 일기는 모두 사라집니다.</string>

    <!-- Training Time -->
    <string name="default_training_time">10:00 PM</string>
    <string name="my_page_setting_training_time_title">알림 시간</string>
    <string name="edit_traint_time_top_app_bar_title">학습 알림 설정</string>
    <string name="training_time_change_button">완료</string>

    <!-- Training Plan -->
    <string name="edit_training_plan_title">트레이닝 플랜 변경</string>
    <string name="training_plan_selection_icon">selection icon</string>
    <string name="edit_training_plan_button">완료</string>
    <string name="no_plan_title">아직 플랜이 없어요!</string>
    <string name="no_plan_navigate_description">플랜 설정하러 가기</string>
    <string name="set_my_plan">플랜 설정하기</string>
    <string name="notice_back_process">뒤로가기 버튼을 한번 더 누르면 종료됩니다.</string>

    <!-- Coach -->
    <string name="coach_banner_comment">하루 한 번 무료 AI 코칭</string>
    <string name="coach_banner_text_0">완벽한 일기예요!👍\n문장이 자연스럽고 오류가 없어요.</string>
    <string name="coach_banner_text_1">잘 작성했어요!🙌\n작은 부분만 다듬으면 완벽해요.</string>
    <string name="coach_banner_text_2">대단해요!🥳🎉\n몇 가지 피드백을 준비해 봤어요.</string>
    <string name="coach_banner_text_default">대단해요!🥳🎉\n몇 가지 피드백을 준비해 봤어요.</string>
    <string name="lottie_animation_description">AI 코치가 내 일기를 분석하고 있어요.\n잠시만 기다려주세요.</string>
    <string name="bookmark_ai_loading_description">AI가 학습할 표현을 정리하고 있어요</string>
    <string name="coach_topappbar_action_text">닫기</string>
    <string name="coach_detail_my_diary">나의 일기</string>
    <string name="coach_detail_corrected_sentence">고친 문장</string>

    <!-- Survey -->
    <string name="thumbs_up_description">좋아요</string>
    <string name="thumbs_down_description">아쉬워요</string>
    <string name="survey_submit_button_text">의견 보내기</string>
    <string name="survey_coaching_count_message">%s님,\n오늘까지 코칭을 %d번 받으셨네요!\n꾸준함이 대단해요! 👏</string>
    <string name="survey_content">AI 코칭, 어떠셨나요?</string>
    <string name="survey_textfield_placeholder">(선택) 이유를 적어주세요.</string>

    <!-- Diary Detail -->
    <string name="diary_detail_coaching_off">코칭 OFF</string>
    <string name="diary_detail_coaching_on">코칭 ON</string>

    <!-- BNV -->
    <string name="bnv_title_bookmark">북마크</string>
    <string name="bnv_title_calendar">캘린더</string>
</resources>
